# skip-lite

./: .gitignore  AGENTS.md  LICENSE  README.md  dune-project  skip-lite.opam
docs/: macos_cmt_cache_plan.md
lib/marshal_cache/: dune  marshal_cache.ml  marshal_cache.mli  marshal_cache_stubs.cpp
lib/reactive_file_collection/: dune  reactive_file_collection.ml  reactive_file_collection.mli
test/: bench_collection.ml  bench_marshal_cache.ml  bench_realistic.ml  dune  test_marshal_cache.ml  test_reactive_file_collection.ml
