(test
 (name test_reactive_file_collection)
 (libraries reactive_file_collection unix)
 (flags (:standard -alert -unsafe)))


(test
 (name test_marshal_cache)
 (libraries reactive_file_collection unix)
 (flags (:standard -alert -unsafe)))

(executable
 (name bench_marshal_cache)
 (libraries reactive_file_collection unix)
 (flags (:standard -alert -unsafe)))

(executable
 (name bench_realistic)
 (libraries reactive_file_collection unix)
 (flags (:standard -alert -unsafe)))

(executable
 (name bench_collection)
 (libraries reactive_file_collection unix)
 (flags (:standard -alert -unsafe)))

